--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -67,11 +67,10 @@
 @primaryBrandGreen: #00853f;
 @brightGreen: #8cc63f;
 @body-bg: #f2f2f2;
-
-@brand-success:             #3cac30;
-@brand-info:                #43C1E6;
-@brand-warning:             #f0ad4e;
-@brand-danger:              #e43b34;
+@brand-success: #3cac30;
+@brand-info: #43c1e6;
+@brand-warning: #f0ad4e;
+@brand-danger: #e43b34;
 
 // Grays
 // -------------------------
@@ -121,7 +120,7 @@
 @font-size-h4: ceil((@font-size-base * 1.25)); // ~18px
 @font-size-h5: ceil((@font-size-base * 0.9)); // ~13px
 @font-size-h6: ceil((@font-size-base * 0.85)); // ~12px
-@headings-line-height: 1.2;
+@headings-line-height: 1.2em;
 
 // Common Components
 // -------------------------
